gazm-plugin/treesitter-gazm/grammar.js
        source_file: $ =>
            repeat(choice(
                $.long_doc,
                $.doc,
                $.comment,
                $.macro_def,
                $.struct_def,
                $.repeat,
                $.if_statement,
                $.while_statement,
                $.for_statement,
                $.break_statement,
                $.continue_statement,
                $._line
            )),

        scope: $ => seq(asRegex( 'scope' ), $._identifier),
        put: $ => seq(asRegex( 'put' ), $._expression),
        grabmem: $ => seq(asRegex( 'grabmem' ), field('addr', $._expression), ',', field('size', $._expression)),

        writebin: $ => seq(asRegex( 'writebin' ),
            field('file', $.string_literal), ',',
            field('addr', $._expression),
            optional(seq(',', field('len', $._expression)))
        ),

        incbin: $ => seq(asRegex('incbin'),
            field('file', $.string_literal),
            optional($._incbinargs)
        ),

        importer: $ => seq(
            asRegex('import'),
            commaSep1(choice(
                $.global_scoped_id,
                $.import_group,
                $.label,
            )),
        ),

        incbinref: $ => seq(asRegex( 'incbinref' ),
            field('file', $.string_literal),
            optional($._incbinargs)
        ),

        setdp: $ => seq(asRegex( 'setdp' ), $._expression),

        org: $ => seq(asRegex( 'org' ), $._expression),
        section: $ => seq(asRegex( 'section' ),
            field('name', choice($.label, $.local_label, $.string_literal)),
            repeat(seq(',', optional(seq(choice($.label, $.local_label, $.string_literal), '=')), $._expression))
        ),

        exec_addr: $ => seq(asRegex( 'exec_addr' ), $._expression),
        include: $ => seq(asRegex( 'include' ), $.string_literal),

        _incbinargs: $ =>
            choice(
                seq(',', field('len', $._expression)),
                seq(',', field('offset', $._expression), ',', field('len', $._expression))
            ),

        comment: $ => choice(
            seq(';', /(\\(.|\r?\n)|[^\\\n])*/),
            seq('//', /(\\(.|\r?\n)|[^\\\n])*/),
            seq(
                '/*',
                /[^*]*\*+([^/*][^*]*\*+)*/,
                    '/'
                )
            ),

        _line: $ => seq(choice(
                $.equate,
                $.macro,
                $._macro_label,
                $._command,
                $._command_label,
                $.opcode,
                $._opcode_label,
                $._label_definition,
            ),
            choice(optional($.doc),optional($.comment)),
            $._line_break),

        binary_expression: $ => {
            return choice(...BIN_OPS.map(([operator, precedence, name]) => {
                return prec.left(precedence,
                    seq(
                        field('left', $._expression),
                        field('operator', operator),
                        field('right', $._expression)
                    )
                )
            }));
        },

        string_literal: $ => seq(
            '"',
            repeat(choice(
                token.immediate(prec(1, /[^\\"\n]+/)),
                $.escape_sequence
            )),
            '"',
        ),

        _expression: $ => choice(
            $.binary_expression,
            $.unary_expression,
            $._identifier,
            $._number_literal,
            $.char_literal,
            $.pc_expr,
            $.parenthesized_expression,
            $.call_expression,
        ),

        _regsets: $ => seq(alias($.regset_mnemonics, $.mnemonic), $.reg_set),
        _xfers: $ => seq(alias($.xfer_mnemonics, $.mnemonic), $.reg_xfer),
        reg_xfer: $ => seq($._reg, ',', $._reg),

        operand: $ => choice($.immediate, $.extended, $.direct_page, $._indexed),

        immediate: $ => seq('#', $._expression),
        extended: $ => $._expression,
        equate: $ => seq($._identifier, ':', asRegex('equ'), $._expression),

        // Regs
        a: $ => /A|a/,
        x: $ => /X|x/,
        y: $ => /Y|y/,
        u: $ => /U|u/,
        s: $ => /S|s/,
        cc: $ => /[cC][cC]/,
        _index_reg: $ => choice($.s, $.u, $.x, $.y),

        _reg: $ => choice(
            $.a,
            $.b,
            $.d,
            $.x,
            $.y,
            $.u,
            $.s,
            $.pc,
            $.pcr,
            $.cc,
            $.dp,
        ),

        // `>` is the direct-page/16-bit marker; it can prefix an indexed
        // offset too (`>.DYN_OPTR,u` in stargate).
        constant_offset: $ => seq(optional('>'), $._expression, ',', $._index_reg),
        pc_offset: $ => seq(optional('>'), $._expression, ',', 'pc'),
        pc_offset_rel: $ => seq(optional('>'), $._expression, ',', 'pcr'),
        pre_dec: $ => seq(',', '-', $._index_reg),
        pre_dec_dec: $ => seq(',', '--', $._index_reg),
        post_inc: $ => seq(',', $._index_reg, '+'),
        post_inc_inc: $ => seq(',', $._index_reg, '++'),
        zero_index: $ => seq(',', $._index_reg),

        _indexed: $ => choice($.indirect, $._indexed_direct),

        indirect: $ => seq('[', choice(
            $.constant_offset,
            $.pc_offset,
            $.pc_offset_rel,
            $.pre_dec_dec,
            $.post_inc_inc,
            $.add_a,
            $.add_b,
            $.add_d,
            $.zero_index,
            $._expression,
        ), ']'),

        mnemonic: $ => prec(1, MNEMONICS_REGEX),

        opcode: $ => choice($._xfers, $._regsets, $.mnemonic, $._opcode_arg),

        _opcode_arg: $ => seq(
            $.mnemonic,
            $.operand),

        _identifier: $ => choice($.local_label, $.label, $.scoped_label),

        // `Name::field` — scoped names (relative). The label regex itself
        // is dot-free per segment; `::` separates scope segments.
        // Absolute names (`::a::b`) are covered by global_scoped_id in
        // import position.
		global_scoped_id: $ => repeat1(seq("::", $.label)),

        label: $ => $._global_label,
        local_label: $ => seq(/[@!]/, $._global_label),
        _global_label: $ => /[a-zA-Z_.][a-zA-Z0-9_.]*/,


        // comment: $ => choice(
        //     /;(.*)/,
        //     /\/\/(.*)/
        // ),

        // numbers
        bin_num: $ => mkDigits(choice("%", "0b"), /[01]/),
        hex_num: $ => mkDigits(choice("$", "0x"), /[0-9a-fA-F]/),
        // Float literal: digits, dot, digits. Needs digits after the dot,
        // so the `..` range operator can never be confused with it.
        dec_num: $ => token(/[0-9]+[_0-9]*/),
