gazm-plugin/treesitter-gazm/test/corpus/commands.txt

==================
Example
==================
    gaz: equ 10
    scope hello
    grabmem 1,2
    put 1+2*3

    setdp 10

    writebin "file" , 1,2
    incbinref "file" , 1,2
    INCBIN "file" , 1,2
    incbin "file"
    org 10
    include "ksjkjska"

    exec_addr $ff
    section rom_01, 1, 2
    section rom_01
	import ::hello::x

---
(source_file

 (equate (label) (dec_num))

 (scope (label))


 (grabmem
  addr: (dec_num) size: (dec_num))

 (put
  (binary_expression
   left: (dec_num)
   right: (binary_expression
       left: (dec_num)
       right: (dec_num))))

 (setdp
  (dec_num) )


 (writebin
  file: (string_literal)
  addr: (dec_num)
  len: (dec_num))

 (incbinref
  file: (string_literal)
  offset: (dec_num)
  len: (dec_num))


 (incbin
  file: (string_literal)
  offset: (dec_num)
  len: (dec_num))


 (incbin
  file: (string_literal))

(org (dec_num))

(include (string_literal))

(exec_addr (hex_num))
(section name: (label) (dec_num) (dec_num))
(section name: (label))
(importer (global_scoped_id (label) (label))))
