gazm-plugin/treesitter-gazm/test/corpus/index.txt
==================
Index
==================
// Hello!

lda 20,y
sta 100,x
sta @label,s
sta label,U
sta ,Y
sta ,y++
sta ,y+
sta ,--y
sta ,-y // PHew!
sta aaa,pc
sta @aaa,pcr
lda [ 20,y ]

---
    (source_file
     (comment)

     (opcode (mnemonic) (operand (constant_offset (dec_num) (y)) ))
     (opcode (mnemonic) (operand (constant_offset (dec_num) (x)) ))
     (opcode (mnemonic) (operand (constant_offset (local_label) (s)) ))
     (opcode (mnemonic) (operand (constant_offset (label) (u)) ))
     (opcode (mnemonic) (operand (zero_index  (y)) ))
     (opcode (mnemonic) (operand (post_inc_inc  (y)) ))
     (opcode (mnemonic) (operand (post_inc  (y)) ))
     (opcode (mnemonic) (operand (pre_dec_dec  (y)) ))
     (opcode (mnemonic) (operand (pre_dec  (y)) ))
     (comment)
     (opcode (mnemonic) (operand (pc_offset (label)) ) )
     (opcode (mnemonic) (operand (pc_offset_rel (local_label)) ) )
     (opcode (mnemonic) (operand (indirect (constant_offset (dec_num) (y)) ) ))
    )
