gazm-plugin/treesitter-gazm/test/corpus/nums.txt
==================
Nums
==================

lda 1234
lda 1___234
lda %101010011
lda 0b1010101
lda $ff
lda 0xff

---
    (source_file
     (opcode (mnemonic) (operand (extended (dec_num)) ))
     (opcode (mnemonic) (operand (extended (dec_num)) ))
     (opcode (mnemonic) (operand (extended (bin_num)) ))
     (opcode (mnemonic) (operand (extended (bin_num)) ))
     (opcode (mnemonic) (operand (extended (hex_num)) ))
     (opcode (mnemonic) (operand (extended (hex_num)) ))
     )
